Add database roles and administrator user management
