# src/main/java/collector/bu/entity/UserAccount.java
@@ -1,4 +1,4 @@
 package collector.bu.entity;
 
-public record UserAccount(long id, String username, String passwordHash, boolean enabled) {
+public record UserAccount(long id, String username, String passwordHash, boolean enabled, UserRole role) {
 }
